--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-8 right-sec p-0" *ngIf=" !(selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedCount)">
             <div class="kr-sg-input-search" [ngClass]="{ 'd-none': !showSearch }">
-                <input type="text" placeholder="Search" id="inputSearch" class="input-search" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (focusout)="focusoutSearch()" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search"  maxlength="60" id="inputSearch" class="input-search" [ngClass]="{'pl-33':!searchRules,'pl-2':searchRules}" autocomplete="off" [(ngModel)]="searchRules" (focusout)="focusoutSearch()" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchRules">
                 <img class="close-icon" *ngIf="searchRules" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchRules}" (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="searchRules='';toggleSearch(false)">
@@ -202,7 +202,7 @@
 
             <div class="kr-sg-input-text mb-5">
                 <div class="label-text">{{ "businessRules.rule_name" | translate }}</div>
-                <input type="text" placeholder="Rule Name" class="input-text" [(ngModel)]="addEditRuleObj.ruleName" [ngClass]="{'err-block' : (!addEditRuleObj.ruleName.length && submitted)}"/>
+                <input type="text" placeholder="Rule Name"  maxlength="60" class="input-text" [(ngModel)]="addEditRuleObj.ruleName" [ngClass]="{'err-block' : (!addEditRuleObj.ruleName.length && submitted)}"/>
                 <img *ngIf="!addEditRuleObj.ruleName && submitted" id="ruleNameWarning" src="assets/icons/warning_escalation.svg" style="top: 60%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
             </div>
             <div class="rules-block row">
