--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -377,7 +377,7 @@
 		</ng-container> 
 		<div class="kr-sg-input-text pt-3">
 			<div class="label-text">{{newConfigObj.method==='clone'?'Search Configuration Name':'Configuration Name'}}</div>
-			<input type="text" [ngClass]="{'err-block' : (!newConfigObj.name.length && submitted)}" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
+			<input type="text" maxlength="60" [ngClass]="{'err-block' : (!newConfigObj.name.length && submitted)}" placeholder="{{newConfigObj.method==='clone'?'Name the New Search Configuration':'Enter Name'}}" [(ngModel)]="newConfigObj.name" class="input-text">
 			<img *ngIf="!newConfigObj.name.length && submitted" id="searchNameWarning" src="assets/icons/warning_escalation.svg" style="top: 70%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 		</div>	
 	</div>
@@ -419,7 +419,7 @@
 		</ng-container> 
 		<div class="kr-sg-input-text pt-4">
 			<div class="label-text">{{newIndexConfigObj.method==='clone'?'Index Configuration Name':'Name of Index Configuration'}}</div>
-			<input type="text" [ngClass]="{'err-block' : (!newIndexConfigObj.name.length && submitted)}" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
+			<input type="text" maxlength="60" [ngClass]="{'err-block' : (!newIndexConfigObj.name.length && submitted)}" placeholder="{{newIndexConfigObj.method==='clone'?'Name the New Index Configuration':'Enter Name'}}" [(ngModel)]="newIndexConfigObj.name" class="input-text">
 			<img *ngIf="!newIndexConfigObj.name.length && submitted" id="indexNameWarning" src="assets/icons/warning_escalation.svg" style="top: 72%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
 		</div>	
 	</div>
