--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -32,7 +32,7 @@
                 <div class="seach-block"  (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img  *ngIf="showSearch" src="assets/images/close.svg" >Search
                 </div> -->
                 <div class="kr-sg-input-search m-0"  [ngClass]="{'d-none': !showSearch}">                               
-                    <input type="text" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" (focusout)="focusoutSearch();" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                    <input type="text" maxlength="60" placeholder="Search" id="inputSearch" class="input-search"  [ngClass]="{'pl-33':!searchcredential,'pl-2':searchcredential}" autocomplete="off" [(ngModel)]="searchcredential" (focusout)="focusoutSearch();" maxlength="50" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                     (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchcredential">
                 <img class="close-icon" *ngIf="searchcredential" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchcredential}"  (mouseover)="activeClose=true" (mouseout)="activeClose=false" (click)="searchcredential='';showSearch=!showSearch;"  placement="top-center" container='body' ngbTooltip="Cancel" tooltipClass="ngb_tooltip_custom_class sampleJson">
@@ -76,7 +76,7 @@
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
+                <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
             </div>
             <div class="kr-sg-checkbox d-none">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
@@ -125,7 +125,7 @@
         <div class="modal-body">
             <div class="kr-sg-input-text mb-4">
                 <div class="label-text">{{"credentials.credential_name" | translate}}</div>
-                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name" class="input-text">
+                <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name" class="input-text">
             </div>
             <div class="kr-sg-checkbox d-block p-0 ">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.anonymus">
