contactus popup created

--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -208,9 +208,9 @@
                         </div>
                     </div>
                 </li> -->
-                <li class="nav-item help-icon">
+                <!-- <li class="nav-item help-icon">
                     <img src="assets/icons/sidemenu/help.svg">
-                </li>
+                </li> -->
                 <li class="nav-item user_icon">
                     <button mat-button [matMenuTriggerFor]="menu" class="headerIcons p-0"><img src="assets/images/avatar.svg"></button>
                     <mat-menu #menu="matMenu" class="headerDropDown">
