--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -116,7 +116,7 @@
                                 </div>
                                 <div class="col-4 p-0 lef-info">
                                     <div class="approved_title">{{'resultRanking.last_changes_caps' | translate}}</div>
-                                    <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'd MMMM ,YYYY' || '--'}}</span></div>
+                                    <div class="approved_date"><span class="time">{{lastModifiedOn | dateFormatPipe: 'D MMMM YYYY' || '--'}}</span></div>
                                 </div>
                                 <div class="col-4 p-0 actions-sec">
                                     <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
