--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -9,7 +9,7 @@
                 <div class="title">Fields</div>
                 <div class="d-flex align-items-center">
                     <div class="kr-sg-input-search m-0" [ngClass]="{'d-none': !showSearch}">
-                        <input type="text" placeholder="Search" maxlength="60" class="input-search" [ngClass]="{'pl-33':!searchFields,'pl-2':searchFields}"
+                        <input type="text" placeholder="Search" maxlength="60" class="input-search" (keyup)="searchByFields()" [ngClass]="{'pl-33':!searchFields,'pl-2':searchFields}"
                             autocomplete="off" id="fieldSearchId" [(ngModel)]="searchFields" (focusout)="focusoutSearch();"
                             (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                             (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'"
@@ -158,7 +158,8 @@
                         </div>
                     </div>
                     <perfect-scrollbar class="table_body_content">
-                        <div class="table_body row m-0" *ngFor="let field of filelds | fieldsFilter: [ searchFields, 'fieldName'];let i=index">
+                        <!-- <div class="table_body row m-0" *ngFor="let field of filelds;let i=index"> -->
+                            <div class="table_body row m-0" *ngFor="let field of filelds | fieldsFilter: [ searchFields, 'fieldName'];let i=index">
                             <div class="col-2 title">{{field.fieldName}}</div>
                             <div class="col-2 title">{{field.fieldDataType | translate}}</div>
                             <div class="col-2 title">{{field.isMultiValued?'Yes':'No'}}</div>
@@ -175,6 +176,7 @@
                         <div class="divBlockEmptylastChild text-center">         
                             <div class="desc">No search results found</div>
                         </div> 
+                        <app-record-pagination *ngIf="totalRecord && totalRecord>10" [totalRecord]='totalRecord' [limitpage]='10' (pageChanged)="paginate($event)"></app-record-pagination>
                     </perfect-scrollbar>  
                 </div>
                
