--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1252,7 +1252,7 @@ input:focus{
   }
 
   .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details .content-data-sec{
-    padding: 0 10px;
+    padding: 9px 0 0 20px;
     position: relative; 
     max-height: calc(100vh - 267px);
    }
@@ -2423,7 +2423,7 @@ display: none !important;
 }
 
 .topdown-search-main-container .all-result-container.center-align-filter .full-results-data-container .all-product-details .content-data-sec.facets-disabled{
-  padding: 0 10px;
+  padding: 9px 0 0 20px;
   position: relative; 
   max-height: calc(100vh - 220px);
  }
