--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -736,3 +736,31 @@
         }
     }
 }
+
+.result-right-sec.tileWithCenteredContent{
+    .carousel{
+        .slide{
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 -4px;
+            .result-card{
+                // width: 48%;
+                margin: 4px;
+                box-shadow: 0px 0px 80px rgb(0 0 0 / 7%), 0px 0px 10.0172px rgb(0 0 0 / 4%);
+                border-radius: 8px;
+                .img-block{
+                    border-radius: 8px 8px 0px 0px;
+                }
+                .content-sec{
+                    text-align: left;
+                    .r-title{
+                        margin-bottom: 8px;
+                    }
+                    .r-desc{
+                        padding: 10px 0;
+                    }
+                }
+            }
+        }
+    }
+}
