contactus form done in pricing

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -270,7 +270,7 @@
                         <div class="drag-drop-sec">
                           <ng-container *ngIf="!fileObj.fileName">
                             <input type="file" id="sourceFileUploader" class="custom-file-input "
-                                (change)="fileChangeListener($event)" aria-describedby="inputGroupFileAddon01" accept=".csv,.pdf,.json,.doc,.ppt,.xlsx,.txt">
+                                (change)="fileChangeListener($event)" aria-describedby="inputGroupFileAddon01" accept=".csv,.pdf,.json,.doc,.ppt,.xlsx,.txt,.docx">
                             <div class="imageDiv">
                               <img src="assets/images/source-icos/drog_frop.svg">
                             </div>
