FLY-2503 : UAT_Pricing_In 'Usage log' page, 'Current Plan' text should be displayed in a single line issue fixed

--- a/findly-builder/src/app/components/usage-log/usage-log.component.scss
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.scss
@@ -75,7 +75,7 @@
         border: 1px solid #E7F1FF;
         box-sizing: border-box;
         border-radius: 4px;
-        width: 181px;
+        width: auto !important;
         height: 56px;
         align-items: center;
         padding: 10px 15px;
