Icons for Data & File

--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -74,7 +74,8 @@
                         <div class="col-4 title d-flex align-items-center search-results">
                             <span class="img-sec" *ngIf="result.answerType =='faq'"><img src="assets/icons/question-box.svg" ></span>
                             <span class="img-sec" *ngIf="result.answerType =='web'"><img src="assets/icons/page.svg"></span>
-                            <span class="img-sec" *ngIf="result.answerType =='file'"><img src="assets/icons/page.svg"></span>
+                            <span class="img-sec" *ngIf="result.answerType =='file'"><img src="assets/icons/resultranking/file-icon.svg"></span>
+                            <span class="img-sec" *ngIf="result.answerType =='data'"><img src="assets/icons/resultranking/data-icon.svg"></span>
                             <span class="img-sec" *ngIf="result.answerType =='task'"><img src="assets/icons/sidemenu/new-icons/actions.svg" ></span>
                             <span class="results">{{result.answer}}</span>
                         </div>
